add readme to modular code block